--- a/src/main/resources/templates/recycleArticle.html
+++ b/src/main/resources/templates/recycleArticle.html
@@ -97,17 +97,20 @@
         <div>
             <ol class="breadcrumb">
                 <li><a href="/home">首页</a></li>
-                <li class="active">文章列表</li>
+                <li class="active">回收站</li>
             </ol>
         </div>
         <div class="part1" style="min-height: 700px">
             <table id="articleList" class="table">
                 <thead>
                 <tr>
-                    <th>日期</th>
-                    <th>等级</th>
+                    <th width="80">日期</th>
+                    <th width="70">等级</th>
+                    <th width="70">类型</th>
                     <th>标题</th>
-                    <th>发布人</th>
+                    <th width="150">修改时间</th>
+                    <th width="80">文章状态</th>
+                    <th width="150">操作</th>
                 </tr>
                 </thead>
                 <tbody id="listBody">
@@ -123,6 +126,7 @@
         </div>
     </div>
 </main>
+
 <footer class="myfooter" style="height: 150px">
     <div class="container" style="text-align: left">
         <div>
@@ -135,8 +139,23 @@
     </div>
 
 </footer>
+
 </body>
 <script>
+    function dateFmt_yyMMdd_hhmmss(str) {
+        var org = new Date(str);
+        console.log(str);
+        console.log(org);
+        var yy = org.getFullYear();
+        var MM = org.getMonth()+1;
+        var dd = org.getDate();
+
+        var hh = org.getHours();
+        var mm = org.getMinutes();
+        var ss = org.getSeconds();
+
+        return yy+'-'+MM+'-'+dd+' '+hh+':'+mm+':'+ss;
+    }
 
     function dateFmt_yyMMdd(str) {
         var org = new Date(str);
@@ -156,21 +175,43 @@
         }
     }
 
+    function aStatusDisplay(i) {
+        switch (i){
+            case 0:return '草稿';break;
+            case 1:return '已发布';break;
+            case 2:return '待审核';break;
+            case 3:return '文章过期';break;
+            case 4:return '已删除';break;
+            default:return '不明';break;
+
+        }
+    }
+
+    function aTypeDisplay(i) {
+        switch (i){
+            case 1:return '普通';break;
+            case 2:return '公文';break;
+            default:return '不明';break;
+        }
+    }
+
     var StartPage =1;
     var Rows = 20;
     var pageTotal = 0;
     var nowPage = 1;
+    var nowUser = window.sessionStorage.getItem('name');
 
     function getListData(page) {
         var parms = {
             'page': page,
-            'rows': Rows
+            'rows': Rows,
+            'user':nowUser
         }
         var ListData ={"null":null} ;
         var list='';
 
         $.ajax({
-            url: '/Article/ArticleListP.do',
+            url: '/Article/RecycleArticles.do',
             type: 'POST',
             dataType: 'JSON',
             data: parms,
@@ -178,7 +219,7 @@
                 if (data != null) {
                     ListData =data;
                     var a = ListData.articles;
-                    var one = '';
+                    var one ='';
                     if (a != null){
                         var len = a.length;
                         var ro = ListData.pageSizes;
@@ -189,12 +230,16 @@
                         pageTotal = 1;
                     }
 
-                    for (var i = 0; i < (ro == len ?ro:len) ; i++) {
+                    for (var i = 0; i < (ro == len ?ro:len); i++) {
                         one = '<tr>' +
-                            '<td width="100">' + dateFmt_yyMMdd(a[i].publishTime) + '</td>\n' +
-                            '<td width="100">' + aLevelDisplay(a[i].aLevel) + '</td>\n' +
+                            '<td>' + dateFmt_yyMMdd(a[i].publishTime) + '</td>\n' +
+                            '<td>' + aLevelDisplay(a[i].aLevel) + '</td>\n' +
+                            '<td>' + aTypeDisplay(a[i].aType) + '</td>\n' +
                             '<td><a href="/Article/showArticle.do?aid='+a[i].aid +'" >' + a[i].title + '</a></td>\n' +
-                            '<td width="100">' + a[i].author + '</td>' +
+                            '<td>' + dateFmt_yyMMdd_hhmmss(a[i].lastEditTime)+ '</td>' +
+                            '<td>' + aStatusDisplay(a[i].aStatus) + '</td>' +
+                            '<td><a href="/Article/restore.do?aid='+ a[i].aid +'"><button class="btn btn-primary btn-sm">恢复</button></a> ' +
+                            ' <a href="/Article/delete.do?aid='+ a[i].aid +'"><button class="btn btn-danger btn-sm">彻底删除</button></a></td>' +
                             '</tr>';
 
                         list = list + one;
@@ -209,6 +254,7 @@
 
         return list;
     }
+
 
     function nextPage() {
         if (nowPage == pageTotal){
@@ -236,11 +282,6 @@
         }else {
             getListData(nowPage-1);
         }
-    }
-
-
-    function toArticle() {
-        $.get("/Article")
     }
 
     $(function () {
