--- a/src/main/resources/templates/Article.html
+++ b/src/main/resources/templates/Article.html
@@ -54,7 +54,8 @@
                         <li><a href="/articleList">文章列表</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="/newArticle">发文</a></li>
-                        <li><a href="#">我的文章</a></li>
+                        <li><a href="/myArticle">我的文章</a></li>
+                        <li><a href="/recycledArticle">回收站</a></li>
                     </ul>
                 </li>
                 <li><a href="#">PART 3</a></li>
