--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -47,8 +47,17 @@
         </div>
         <div id="LinkPart" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/articleList">文章</a></li>
-                <li><a href="#">PART 2</a></li>
+                <li class="dropdown">
+                    <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"
+                       aria-expanded="false">文章<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/articleList">文章列表</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="/newArticle">发文</a></li>
+                        <li><a href="/myArticle">我的文章</a></li>
+                        <li><a href="/recycledArticle">回收站</a></li>
+                    </ul>
+                </li>
                 <li><a href="#">PART 3</a></li>
                 <li class="dropdown">
                     <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"
@@ -60,8 +69,8 @@
                     </ul>
                 </li>
             </ul>
-
-            <ul class="nav navbar-nav navbar-right">
+            <input id="nameNav" type="hidden" th:value="${name}" >
+            <ul class="nav navbar-nav navbar-right" id="userNav">
                 <li><a href="#">LOGIN or SIGN UP</a></li>
             </ul>
         </div>
@@ -74,6 +83,8 @@
 
     </div>
 </main>
+
+
 <footer class="myfooter" style="height: 150px">
     <div class="container" style="text-align: left">
         <div>
