添加了查看个人信息.的功能..登出功能..

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -128,7 +128,7 @@
                 ' <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"\n' +
                 ' aria-expanded="false" >'+data+'<span class="caret"></span></a>\n' +
                 ' <ul class="dropdown-menu">\n' +
-                ' <li><a href="#">PART 1</a></li>\n' +
+                ' <li><a href="/user/getPerson.do?name='+data+'">个人信息</a></li>\n' +
                 ' <li><a href="#">PART 2</a></li>\n' +
                 ' <li><a href="#">PART 3</a></li>\n' +
                 ' </ul>\n' +
