--- a/src/main/resources/templates/recycleArticle.html
+++ b/src/main/resources/templates/recycleArticle.html
@@ -293,12 +293,12 @@
                 ' <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"\n' +
                 ' aria-expanded="false" >'+data+'<span class="caret"></span></a>\n' +
                 ' <ul class="dropdown-menu">\n' +
-                ' <li><a href="#">PART 1</a></li>\n' +
-                ' <li><a href="#">PART 2</a></li>\n' +
-                ' <li><a href="#">PART 3</a></li>\n' +
+                ' <li><a href="/user/getPerson.do?name='+data+'">个人信息</a></li>\n' +
+                ' <li><a href="/user/editPerson.do?name='+data+'">修改个人信息</a></li>\n' +
+                ' <li><a href="/user/editPassword.do?name='+data+'">修改密码</a></li>\n' +
                 ' </ul>\n' +
                 ' </li>' +
-                '<li><a href="#">log out</a></li>')
+                '<li><a href="#" onclick="logout()">log out</a></li>')
         }
 
         // temp = getListData();
@@ -306,6 +306,11 @@
         // console.log(temp);
         // $('#listBody').innerHTML=temp;
     })
+
+    function logout() {
+        window.sessionStorage.removeItem('name');
+        window.location.href='/login'
+    }
 
 </script>
 </html>
