--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -42,6 +42,7 @@
         color: white;
     }
 </style>
+<body>
 <div class="panel  panel-primary" style="width: 300px;height: auto;margin: 18% 0;position: fixed;z-index: 100;right: 180px;top: 0px;opacity: 0.7">
     <div class="panel-heading">
         <h4 class="panel-title">login</h4>
@@ -104,8 +105,8 @@
 
         var data={
             "username":username,
-            "password":password,
-        }
+            "password":password
+        };
 
         $.ajax({
             url:"/user/login",
@@ -133,7 +134,7 @@
             "username": username,
             "password": password,
             "email": email
-        }
+        };
 
 
         $.ajax({
@@ -143,7 +144,7 @@
             data: data,
             success: function (data) {
                 if (data.stateCode == 200) {
-                    $('#myModal').modal('toggle')
+                    $('#myModal').modal('toggle');
                     alert(data.msg);
                 }else {
                     var info = '<div class="alert alert-danger " role="alert">' +
