修改了logout的跳转页面

--- a/src/main/resources/templates/editArticle.html
+++ b/src/main/resources/templates/editArticle.html
@@ -201,7 +201,7 @@
 
     function logout() {
         window.sessionStorage.removeItem('name');
-        window.location.href='/login'
+        window.location.href='/'
     }
 
     var ue = UE.getEditor('ueditor');
