--- a/src/main/resources/templates/editPersonal.html
+++ b/src/main/resources/templates/editPersonal.html
@@ -356,7 +356,7 @@
 
     function logout() {
         window.sessionStorage.removeItem('name');
-        window.location.href='/login'
+        window.location.href='/'
     }
 </script>
 </html>
