--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -139,7 +139,7 @@
 
     function logout() {
         window.sessionStorage.removeItem('name');
-        window.location.href='/login'
+        window.location.href='/'
     }
 
 </script>
