--- a/src/main/resources/templates/Article.html
+++ b/src/main/resources/templates/Article.html
@@ -167,7 +167,7 @@
 
     function logout() {
         window.sessionStorage.removeItem('name');
-        window.location.href='/login'
+        window.location.href='/'
     }
 </script>
 </html>
