--- a/src/main/resources/templates/ArticleList.html
+++ b/src/main/resources/templates/ArticleList.html
@@ -268,7 +268,7 @@
 
     function logout() {
         window.sessionStorage.removeItem('name');
-        window.location.href='/login'
+        window.location.href='/'
     }
 
 </script>
