--- a/src/main/resources/templates/myArticle.html
+++ b/src/main/resources/templates/myArticle.html
@@ -308,7 +308,7 @@
 
     function logout() {
         window.sessionStorage.removeItem('name');
-        window.location.href='/login'
+        window.location.href='/'
     }
 
 </script>
