--- a/src/main/resources/templates/newArticle.html
+++ b/src/main/resources/templates/newArticle.html
@@ -187,7 +187,7 @@
 
     function logout() {
         window.sessionStorage.removeItem('name');
-        window.location.href='/login'
+        window.location.href='/'
     }
 
     var ue = UE.getEditor('ueditor');
