--- a/src/main/resources/templates/recycleArticle.html
+++ b/src/main/resources/templates/recycleArticle.html
@@ -309,7 +309,7 @@
 
     function logout() {
         window.sessionStorage.removeItem('name');
-        window.location.href='/login'
+        window.location.href='/'
     }
 
 </script>
