canteen application basic Class .... done take order page .... done

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -116,6 +116,7 @@
             success:function (data) {
                 if(data.stateCode == 200){
                     window.sessionStorage.setItem('name',data.name);
+                    window.sessionStorage.setItem('uid',data.uid);
                     window.location.href=data.toUrl;
                 }else {
                     alert(data.msg);
