--- a/src/main/resources/templates/canteenOrder.html
+++ b/src/main/resources/templates/canteenOrder.html
@@ -6,6 +6,8 @@
     <!--<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css"-->
     <!--integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
     <link type="text/css" rel="stylesheet" th:href="@{/css/bootstrap.css}">
+    <link type="text/css" rel="stylesheet" href="/static/css/bootstrap-switch.min.css">
+    <link type="text/css" rel="stylesheet" href="/static/css/bootstrap-datepicker3.standalone.css">
     <style>
         .myfooter {
             background-color: #5f5f5f;
@@ -27,6 +29,8 @@
 </head>
 <script th:src="@{/js/jquery.min.js}"></script>
 <script  th:src="@{/js/bootstrap.min.js}"></script>
+<script src="/static/js/bootstrap-switch.min.js"></script>
+<script src="/static/js/bootstrap-datepicker.js"></script>
 <!--<script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>-->
 <!--<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"-->
 <!--integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>-->
@@ -80,7 +84,69 @@
 
 <main style="width: 960px;margin: 0 auto">
     <div class="container" style="width: inherit">
+        <div class="page-header col-md-12 col-sm-12 col-xs-12">
+            <h1>用餐预定 <small>take order</small></h1>
+        </div>
+        <div id="msgDiv"class="col-md-12 col-sm-12 col-xs-12" style="height: auto"></div>
 
+        <form class="form-horizontal" id="orderForm">
+            <div class="form-group disabled col-md-12">
+                <label class="col-md-1">UID</label>
+                <div class="col-md-5">
+                    <input id="uid" name="uid" class="form-control" th:value="${user.uid}" disabled></input>
+                </div>
+                <label class="col-md-1">用户</label>
+                <div class="col-md-5">
+                    <input id="username" name="username" class="form-control" th:value="${user.username}" disabled></input>
+                </div>
+            </div>
+            <div class="form-group disabled col-md-12">
+                <label class="col-md-2">日期范围</label>
+                <div class="col-md-10">
+                    <div class="input-daterange input-group" id="datepicker">
+                        <input type="text" class="input-sm form-control" name="start" />
+                        <span class="input-group-addon">到</span>
+                        <input type="text" class="input-sm form-control" name="end" />
+                    </div>
+                </div>
+            </div>
+            <div class="form-group disabled col-md-12">
+                <label class="col-md-1">早餐</label>
+                <div class="col-md-5">
+                    <div class="switch" data-on-label="<i class='icon-ok icon-white'></i>" data-off-label="<i class='icon-remove'></i>">
+                        <input id="breakfast" name="breakfast" type="checkbox"  value="1" />
+                    </div>
+                </div>
+                <label class="col-md-1">份数</label>
+                <div class="col-md-5">
+                    <input name="bfMany" id="bfMany" type="text" class="form-control">
+                </div>
+            </div>
+            <div class="form-group disabled col-md-12">
+                <label class="col-md-1">午餐</label>
+                <div class="col-md-5">
+                    <div class="switch" data-on-label="<i class='icon-ok icon-white'></i>" data-off-label="<i class='icon-remove'></i>">
+                        <input id="lunch" name="lunch"  type="checkbox" value="1"/>
+                    </div>
+                </div>
+                <label class="col-md-1">份数</label>
+                <div class="col-md-5">
+                    <input name="lMany" id="lMany" type="text" class="form-control">
+                </div>
+            </div>
+            <div class="form-group disabled col-md-12">
+                <label class="col-md-1">晚餐</label>
+                <div class="col-md-5">
+                    <div class="switch" data-on-label="<i class='icon-ok icon-white'></i>" data-off-label="<i class='icon-remove'></i>">
+                        <input id="dinner" name="dinner" type="checkbox" value="1"/>
+                    </div>
+                </div>
+                <label class="col-md-1">份数</label>
+                <div class="col-md-5">
+                    <input name="dMany" id="dMany" type="text" class="form-control">
+                </div>
+            </div>
+        </form>
     </div>
 </main>
 
@@ -100,9 +166,15 @@
 
 </body>
 <script>
+
+    $('#sandbox-container .input-daterange').datepicker({
+        format: "yyyy-mm-dd",
+        daysOfWeekHighlighted: "0,6"
+    });
+
     $(function () {
         var data = window.sessionStorage.getItem('name');
-        if (data !=""){
+        if (data != null){
             $('#userNav').html('<li class="dropdown">\n' +
                 ' <a href="#"  class="dropdown-toggle" data-toggle="dropdown" Role="button" aria-haspopup="true"\n' +
                 ' aria-expanded="false" >'+data+'<span class="caret"></span></a>\n' +
